feature: add canary deployment with istio and flagger
Signed-off-by: Jiang Yi Tao <jiangyt.cn@gmail.com>

--- a/charts/awesome-go/values.yaml
+++ b/charts/awesome-go/values.yaml
@@ -39,3 +39,34 @@ readinessProbe:
   periodSeconds: 10
   successThreshold: 1
   timeoutSeconds: 1
+
+canary:
+  enable: true
+  service:
+    # Istio virtual service host names
+    hosts:
+    - awesome-go.192.168.1.12.nip.io
+    gateways:
+    - jx-gateway.istio-system.svc.cluster.local
+  canaryAnalysis:
+    # schedule interval (default 60s)
+    interval: 60s
+    # max number of failed metric checks before rollback
+    threshold: 5
+    # max traffic percentage routed to canary
+    # percentage (0-100)
+    maxWeight: 50
+    # canary increment step
+    # percentage (0-100)
+    stepWeight: 10
+    metrics:
+    - name: request-success-rate
+      # minimum req success rate (non 5xx responses)
+      # percentage (0-100)
+      threshold: 99
+      interval: 60s
+    - name: request-duration
+      # maximum req duration P99
+      # milliseconds
+      threshold: 500
+      interval: 60s
