--- a/charts/awesome-go/values.yaml
+++ b/charts/awesome-go/values.yaml
@@ -45,7 +45,7 @@ canary:
   service:
     # Istio virtual service host names
     hosts:
-    - awesome-go.192.168.1.12.nip.io
+    - awesome-go.ing.light.caas.ystacks.com
     gateways:
     - jx-gateway.istio-system.svc.cluster.local
   canaryAnalysis:
